Started working on Textarea widget

--- a/ui/css/demo.css
+++ b/ui/css/demo.css
@@ -73,3 +73,9 @@ label, input {
   font: italic 95% Arial, sans-serif;
   color: #999;
 }
+
+textarea {
+    width: 400px;
+    height: 100px;
+    padding: 2px;
+}
