--- a/ui/css/demo.css
+++ b/ui/css/demo.css
@@ -79,3 +79,9 @@ textarea {
     height: 100px;
     padding: 2px;
 }
+
+.textarea-label {
+    padding: 2px;
+    margin-right: 20px;
+    float: left;
+}
