--- a/src/ui/css/demo.css
+++ b/src/ui/css/demo.css
@@ -8,7 +8,7 @@
 /* Author: attila@google.com (Attila Bodis) */
 
 
-@import url(../../../../closure-library/closure/goog/css/common.css);
+@import url(../../../lib/closure-library/closure/goog/css/common.css);
 
 
 body {
