add width to flex grow

--- a/src/ui/css/table.css
+++ b/src/ui/css/table.css
@@ -112,6 +112,7 @@ table.recoil-table-pager .page {
     display: flex;
     overflow: auto;
     height:100%;
+    min-width:1000px;
 }
 
 .flex-direction {
