CT-18545 Added confirm option to button.

--- a/src/ui/css/button.css
+++ b/src/ui/css/button.css
@@ -5,3 +5,8 @@
     text-shadow: none;
 }
 
+.recoil-button-confirm {
+    position: fixed;
+    border: 2px solid lightblue;
+    border-radius: 100%;
+}
